# libstealthtech

./: .gitignore  CONTRIBUTING.md  Cargo.toml  GOOGLE_ANALYTICS.md  LICENSE  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: architecture.md  firmware-analysis.md  hardware-teardown.md  protocol-mapping.md  reverse-engineering.md
java/: README.md
node/: README.md
rust/bridge/: Cargo.toml
rust/bridge/src/: lib.rs
rust/cli/: Cargo.toml
rust/cli/src/: cli.rs  sniff.rs
rust/cli/src/serve/: api.rs  docs.rs  embed.rs  mod.rs  state.rs  ws.rs
rust/cli/src/serve/static/: app.js  bluetooth.js  index.html  manifest.json  robots.txt  shared.js  sitemap.xml  standalone.html  style.css
rust/core/: Cargo.toml
rust/core/src/: lib.rs
rust/core/src/ble/: connection.rs  gatt.rs  mod.rs  scanner.rs
rust/core/src/device/: mod.rs
rust/protocol/: Cargo.toml
rust/protocol/src/: characteristics.rs  commands.rs  lib.rs  state.rs
rust/wasm/: Cargo.toml
rust/wasm/src/: lib.rs
swift/: README.md
