[workspace]
resolver = "2"
members = [
    "rust/protocol",
    "rust/core",
    "rust/cli",
    "rust/bridge",
    "rust/wasm",
]
default-members = [
    "rust/protocol",
    "rust/core",
    "rust/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["StealthTech Open Source Contributors"]
license = "MIT"
repository = "https://github.com/jackspirou/libstealthtech"
keywords = ["bluetooth", "ble", "lovesac", "stealthtech", "audio"]
categories = ["hardware-support", "api-bindings"]
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
libstealthtech-protocol = { path = "rust/protocol" }
libstealthtech-core = { path = "rust/core" }

# Cross-platform BLE
btleplug = "0.11"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging (lib uses tracing; apps own the subscriber)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI (binary crates only)
clap = { version = "4", features = ["derive"] }

# Hex encoding for BLE payloads
hex = "0.4"

# UUID handling
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Web server (CLI serve subcommand)
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
rust-embed = { version = "8", features = ["debug-embed"] }
mime_guess = "2"

# Native bindings (bridge crate)
uniffi = { version = "0.29", features = ["tokio"] }

# WASM bindings
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
strip = "debuginfo"
