[package]
name = "stealthtech-tools"
description = "CLI tools for StealthTech BLE control and protocol reverse engineering"
publish = false

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
libstealthtech-core.workspace = true
btleplug.workspace = true
tokio.workspace = true
futures.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
hex.workspace = true
uuid.workspace = true
chrono.workspace = true
serde_json.workspace = true
axum.workspace = true
tower-http.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true
pulldown-cmark.workspace = true
serde.workspace = true

[[bin]]
name = "stealthtech"
path = "src/cli.rs"
