[package]
name = "libstealthtech-core"
description = "Core Rust library for interfacing with Lovesac StealthTech via BLE"
publish = false
readme = "../../README.md"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
libstealthtech-protocol.workspace = true
btleplug.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
hex.workspace = true
uuid.workspace = true
chrono.workspace = true
