[package]
name = "libstealthtech-protocol"
description = "StealthTech BLE protocol types — WASM-compatible, zero native deps"
publish = false

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
uuid.workspace = true
serde.workspace = true
thiserror.workspace = true
hex.workspace = true

[dev-dependencies]
serde_json.workspace = true
